# NeoKLine-w

./: .gitignore  NeoKline.py  README.md  config.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
auth/: login.py  wechat_callback.py  wechat_login.py
data/: stock_basic.csv  stock_calender.csv
llm/: siliconflow.py
pages/: 股票K线分析.py
prepare/: stock.py
tools/: stock_data.py
view/: llm_qa.py
